force-app/main/default/objects/Account/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>云南</fullName>
            </value>
            <value>
                <fullName>广西</fullName>
            </value>
            <value>
                <fullName>贵州</fullName>
            </value>
            <value>
                <fullName>台湾</fullName>
            </value>
            <value>
                <fullName>四川</fullName>
            </value>
            <value>
                <fullName>江苏</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>