force-app/main/default/objects/Account/fields/Team_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Team_Approved_Date__c</fullName>
    <description>Date the Team Account is approved.</description>
    <label>Team Approved Date</label>
    <type>Date</type>
</CustomField>