force-app/main/default/objects/Account/fields/Team_Status__c.field-meta.xml
<CustomField>
    <fullName>Team_Status__c</fullName>
    <description>Team Account approval status</description>
    <label>Team Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>