force-app/main/default/objects/Account/recordTypes/NextGen.recordType-meta.xml
<RecordType>
    <fullName>NextGen</fullName>
    <active>true</active>
    <description>Foundation accounts</description>
    <label>NextGen</label>
</RecordType>