force-app/main/default/objects/Account/recordTypes/Volunteer_Team.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Team</fullName>
    <active>true</active>
    <description>Indicating this is the Account for the Volunteer Teams</description>
    <label>Volunteer Team</label>
</RecordType>